:bug: Fix image not showing

--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -109,6 +109,10 @@ section.projects {
                     background: -moz-linear-gradient(var(--gradientAngle), var(--gradientStart) 0%, var(--gradientEnd) 100%);
                     background: -webkit-linear-gradient(var(--gradientAngle), var(--gradientStart) 0%, var(--gradientEnd) 100%);
                     background: linear-gradient(var(--gradientAngle), var(--gradientStart) 0%, var(--gradientEnd) 100%);
+
+                    >img.card__image {
+                        width: 50%;
+                    }
                 }
             }
         }
